// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`opening match checkpoints > matches the pre-refactor seeded command, event, visibility, and checkpoint baseline > seed 17 1`] = `
{
  "commands": [
    null,
    {
      "participantId": "scenario-player-one",
      "replaceInstanceIds": [
        "scenario-player-one:deck:17",
      ],
      "type": "confirm-mulligan",
    },
    {
      "participantId": "scenario-player-two",
      "replaceInstanceIds": [
        "scenario-player-two:deck:21",
      ],
      "type": "confirm-mulligan",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardInstanceId": "missing",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "participantId": "scenario-player-two",
      "target": {
        "kind": "hero",
        "participantId": "scenario-player-one",
      },
      "type": "use-hero-power",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "goblins_vs_gnomes_blingtron_3000",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:65",
      "participantId": "scenario-player-two",
      "position": 0,
      "type": "play-card",
    },
    {
      "cardId": "naxxramas_haunted_creeper",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "cardId": "naxxramas_nerubian_egg",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_flamestrike",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:75",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_polymorph",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:87",
      "participantId": "scenario-player-two",
      "targets": [
        {
          "instanceId": "scenario-player-one:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-one",
        },
      ],
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_mind_control",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:88",
      "participantId": "scenario-player-two",
      "targets": [
        {
          "instanceId": "scenario-player-one:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-one",
        },
      ],
      "type": "play-card",
    },
    {
      "cardId": "basic_raid_leader",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "classic_ice_barrier",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:90",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "league_of_explorers_raven_idol",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:92",
      "choice": 0,
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "cardInstanceId": "scenario-player-two:discover:93",
      "participantId": "scenario-player-two",
      "type": "choose-discover-card",
    },
    {
      "participantId": "scenario-player-two",
      "type": "end-turn",
    },
    {
      "participantId": "scenario-player-one",
      "type": "end-turn",
    },
    {
      "attacker": {
        "instanceId": "scenario-player-two:dev:65",
        "kind": "minion",
      },
      "defender": {
        "kind": "hero",
      },
      "participantId": "scenario-player-two",
      "type": "attack-character",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "action": "destroy",
      "participantId": "scenario-player-two",
      "type": "dev-modify-deck",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "action": "refill",
      "participantId": "scenario-player-two",
      "type": "dev-modify-deck",
    },
  ],
  "digests": {
    "checkpoints": "fbb31b7aeca6996a650876f5fa91f661cdd71ce6fcf1bb20d65df8dae6869b0a",
    "commands": "27b804fe2b22d674637c2dbd70f541ddf2c71dbbe634aea3e12427dc0af3cbf7",
    "legality": "e02dcef498531f50981eca6da8270a4b5283f61dd227576c8632ea7375bbf309",
    "publicEvents": "5455e943eebc06bfc0e1395ce226e390427057fbe9f6d62fb9ee23c61f5927cc",
    "publicState": "851e3adc92975939dcdd3ee6ac2431b213a925b2c45bd5280370242dd89f6b00",
    "results": "67b8b27df10ade9845c024df94315d0b777e001366f74fff973d6bfa97cc4ee0",
    "trace": "35024bb97da8a4d4348c063e1d97669db91c05ce1488fbdd7899e48f644f3313",
  },
}
`;

exports[`opening match checkpoints > matches the pre-refactor seeded command, event, visibility, and checkpoint baseline > seed 314159 1`] = `
{
  "commands": [
    null,
    {
      "participantId": "scenario-player-one",
      "replaceInstanceIds": [
        "scenario-player-one:deck:22",
      ],
      "type": "confirm-mulligan",
    },
    {
      "participantId": "scenario-player-two",
      "replaceInstanceIds": [
        "scenario-player-two:deck:22",
      ],
      "type": "confirm-mulligan",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardInstanceId": "missing",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "participantId": "scenario-player-one",
      "target": {
        "kind": "hero",
        "participantId": "scenario-player-two",
      },
      "type": "use-hero-power",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "goblins_vs_gnomes_blingtron_3000",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:65",
      "participantId": "scenario-player-one",
      "position": 0,
      "type": "play-card",
    },
    {
      "cardId": "naxxramas_haunted_creeper",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "cardId": "naxxramas_nerubian_egg",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_flamestrike",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:75",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_polymorph",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:87",
      "participantId": "scenario-player-one",
      "targets": [
        {
          "instanceId": "scenario-player-two:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-two",
        },
      ],
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_mind_control",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:88",
      "participantId": "scenario-player-one",
      "targets": [
        {
          "instanceId": "scenario-player-two:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-two",
        },
      ],
      "type": "play-card",
    },
    {
      "cardId": "basic_raid_leader",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "classic_ice_barrier",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:90",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "league_of_explorers_raven_idol",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:92",
      "choice": 0,
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "cardInstanceId": "scenario-player-one:discover:93",
      "participantId": "scenario-player-one",
      "type": "choose-discover-card",
    },
    {
      "participantId": "scenario-player-one",
      "type": "end-turn",
    },
    {
      "participantId": "scenario-player-two",
      "type": "end-turn",
    },
    {
      "attacker": {
        "instanceId": "scenario-player-one:dev:65",
        "kind": "minion",
      },
      "defender": {
        "kind": "hero",
      },
      "participantId": "scenario-player-one",
      "type": "attack-character",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "action": "destroy",
      "participantId": "scenario-player-one",
      "type": "dev-modify-deck",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "action": "refill",
      "participantId": "scenario-player-one",
      "type": "dev-modify-deck",
    },
  ],
  "digests": {
    "checkpoints": "96535f6828135f0d5421c7ae03a675315d6915f7208f701db2fa75cbdcef0dd6",
    "commands": "1df3500ff667fe5e400400a3846fef06b20472bb50e02d546cdda1d90574a273",
    "legality": "ea7e766d0e80dbe36bafbadec1da246845e2047de8159d96bd0e70a5b0b0f119",
    "publicEvents": "36f69b9e0fcf66e4dcbce6aad85e570f69ff27c87f34c207fcb7e2042caa7ef8",
    "publicState": "a67da8e566dc3c54cacb1edcf69288c9c27738f3f91cc633fb0c77ca5de626f7",
    "results": "35a81cfa32bb9273f22e3aa060eedb88513560085f719a78ce9afc405d331a8a",
    "trace": "464ae017dc4c1f1cc42781fce2b343c5523ab3b7fb51ae989904a80ab5481d83",
  },
}
`;
